--- a/style.css
+++ b/style.css
@@ -34,12 +34,12 @@ text.months {
 }
 text.months, text.temp {
  fill: #ccc;
- font-size: 1vw;
+ font-size: 1.3vh;
  dominant-baseline: central;
 }
 
 text.footnote {
-  font-size: 1.2vw;
+  font-size: 1.8vh;
   fill: #ccc;
   text-anchor: end;
 }
